<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Doa Sehari Hari</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="bookmark">Bookmark</string>
    <string name="bismillah">بِسْمِ اللهِ الرَّحْمنِ الرَّحِيْمِ</string>
    <string name="doa">Doa</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="doa_sehari_hari">Doa Sehari Hari</string>
    <string name="created_by_">Created By:</string>
    <string name="Nama">Wihardodo\nSalman Wahyudin\nMohammad Febri Ramadlan\nMohammad Abdul Iman Syah</string>
    <string name="copy">Copyright 2014 - UNIKOM</string>

</resources>